# flash-card

./: .gitignore  Dockerfile.scrapy  Makefile  README.md  docker-compose.yml
app/: Cargo.toml  Rocket.toml
app/csv_files/: test.csv
app/migrations/2024-09-17-152536_practice_schedule/: down.sql  up.sql
app/migrations/2024-09-17-152545_learning_topic/: up.sql
app/migrations/2024-09-17-152857_flash_card/: down.sql  up.sql
app/migrations/2024-09-17-153040_historical_acceptances/: down.sql  up.sql
app/migrations/2024-09-20-154136_practice_schedule/: down.sql  up.sql
app/migrations/2024-09-20-154346_learning_topic/: down.sql  up.sql
app/migrations/2024-09-20-155555_flash_card/: up.sql
app/migrations/2024-09-20-155743_historical_acceptance/: up.sql
app/migrations/2024-09-20-171204_flash_card/: up.sql
app/migrations/2025-09-20-155743_historical_acceptance/: down.sql
app/src/: lib.rs  main.rs  models.rs  schema.rs
docker/: .env  Dockerfile  docker-compose.yml
docker/data/: postmaster.pid
docker/data/base/1/: pg_internal.init
docker/data/base/16384/: 1247  1249  1249_fsm  1255  1255_vm  1259  16389  16393  16427  16428  16434  16435  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2703  2704  (+3 more)
docker/data/global/: 1260  1262  2671  pg_control  pg_internal.init
docker/data/pg_subtrans/: 0000
docs/: TODO.md  database_modeling.md  sql_map.sql  up_and_running.md
scrape/: get_ranked_word_ocurrences.sql  ranked_word_occurrences.sql  scrape.py  wikipedia_articles.sql
(+1 files in other folders)
