[package]
name = "flash_card"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version = "2.2.0", features = ["postgres", "uuid", "chrono"]}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
csv = "1.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
